# grpc-dev-container

./: .gitignore  Dockerfile  Dockerfile.cross-arm  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt  greeter.proto
